Updated weather service for forecast.